Ambulance waiting list CRUD operations 2
